 - [ZBX-3828] added Turkish translation; thanks to Murat Koç (Richlv)
 - [ZBXNEXT-677] added system.hw.* and system.sw.* items for Linux (rudolfs)
 - [ZBXNEXT-780] all items (including user parameters and external checks) can also return only whitespace (rudolfs)

Bug fixes:
 - [ZBX-3846] fixed typo in map creation info message during export (Vedmak)

--------------------------------------------------------------------------------
Changes for 1.9.4

New features:
 - [ZBXNEXT-647] added automatic population of profile fields (KB, Sasha)
 - [ZBXNEXT-629] redesigned discovery form and added https and telnet to discovery and net.tcp.service(.perf) (rudolfs, Vedmak, Aly)
 - [ZBXNEXT-627] support of visible host and template name (Sasha, Alexei)
 - [ZBXNEXT-672] advanced options for remote commands (Aly, asaveljevs, Sasha, Vedmak)
 - [ZBX-1357] updated French, Latvian, Polish, Russian and Ukrainian translations; thanks to Zabbix translators (Richlv)
 - [ZBX-2756] renamed macro {TRIGGER.KEY<1-9>} to {ITEM.KEY<1-9>} (asaveljevs)
 - [ZBXNEXT-511] renamed item description to name, for description introduced a new field (asaveljevs, Vedmak)

Bug fixes:
 - [ZBX-3730] fixed bug with javascript translations - now js strings actually get translated (KB)
 - [ZBX-3752] fixed error in slides with system status (Vedmak)
 - [ZBX-3724] fixed broken images when importing and exporting maps with PostgreSQL (Alexei, Vedmak, Sasha)
 - [ZBX-3794] added timeout support to vfs.file.contents[] command (dimir)
 - [ZBX-3809] fixed overwriting of existing elements and links when importing a map (Alexei)
 - [ZBX-954] typo in constant name, cause error when try to clear item history (Vedmak)
 - [ZBX-3769] fixed applications unlinked when update item prototypes (Vedmak)
 - [ZBX-3678] fixed unlinking template with action triggers (Vedmak)
 - [ZBX-3758] made Zabbix daemons remove their PID file upon unsuccessful startup (asaveljevs)
 - [ZBX-3791] fixed item form caption after cloning item (Vedmak)