@@ -10,6 +10,7 @@ New features:
  - [ZBXNEXT-780] all items (including user parameters and external checks) can also return only whitespace (rudolfs)
 
 Bug fixes:
+ - [ZBX-3852] fixed duplicate HTML IDs in events.php (KB)
  - [ZBX-3846] fixed typo in map creation info message during export (Vedmak)
 
 --------------------------------------------------------------------------------
